project(tests)
add_subdirectory(lib/googletest)
include_directories(lib/googletest/googletest/include)
include_directories(include)
set(SOURCE_FILES ConverterJSON_test.cpp InvertedIndex_test.cpp SearchServer_test.cpp)
set(MY_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
add_executable(testsRun ${SOURCE_FILES})
target_link_libraries(testsRun gtest gtest_main)